# lsvtool

./: .gitignore  LICENSE  README.md  env.yaml  filter_lsv.py  plot.R  reformat.bash  reformat_all_bedpe.bash  setup.cfg
.github/workflows/: ci.yml
src/lsvtool/: __main__.py  lsvtool.smk  parameters.config  reformat.bash  utils.py
src/lsvtool/cli/: filter_lsv.py  init.py  intersect_bedpe.py  parameters.config  plot.R  run.py
src/lsvtool/refs/: HG002_SVs_Tier1plusTier2_v0.6.1.bed  HG002_SVs_Tier2_v0.6.bed  sources.note
src/lsvtool/scripts/: plot.R  plot_heatmap.R  plot_venn.R
tests/: test_cli.py
tests/testdata/: 10x_NA24385.GRCh38.dels.reformatted.vcf.gz.tbi  PacBio_HG002_GRCh38.pbsv.vcf.gz.tbi  README.md
