[metadata]
name = lsvtool 
version = 0.0.1
author = Humam Siga
author_email = humam.siga@gmail.com
description = A tool to analyze and intersect large SV from different tools.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HSiga/lsvtool
project_urls =
    Bug Tracker = https://github.com/HSiga/lsvtool/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requires =
    numpy
    PyVCF
    matplotlib
    pandas
    snakemake

[options.packages.find]
where = src

[options.package_data]
lsvtool =
    lsvtool.smk
    scripts/*.R
    refs/*.bed
    parameters.config

[options.entry_points]
console_scripts =
    lsvtool = lsvtool.__main__:main

[options.extras_require]
test = pytest
dev = flake8

[flake8]
max-line-length = 90
